--- a/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G2_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G2_varyingFKnumbers_parent_operations.yaml
@@ -258,9 +258,9 @@ microbenchmark:
             
         executeRules:
 
-            - workload: FK_G2_parent_no-fk_update
+            - workload: FK_G2_1_parent_no-fk_update
               run:
-                  - name: FK_G2_parent_no-fk_update
+                  - name: FK_G2_1_parent_no-fk_update
                     weight: 100
                     queries:
                         - query: update projects_without_ref set uid=? where id=?;
@@ -270,19 +270,19 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_no-fk_delete
+            - workload: FK_G2_2_parent_no-fk_delete
               run:
-                  - name: FK_G2_parent_no-fk_delete
+                  - name: FK_G2_2_parent_no-fk_delete
                     weight: 100
                     queries:
-                        - query: delete from projects_without_ref where id=?
+                        - query: delete from projects_without_ref where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_1-fk_update
+            - workload: FK_G2_3_parent_1-fk_update
               run:
-                  - name: FK_G2_parent_1-fk_update
+                  - name: FK_G2_3_parent_1-fk_update
                     weight: 100
                     queries:
                         - query: update projects_with_1_ref set uid=? where id=?;
@@ -292,19 +292,19 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_1-fk_delete
+            - workload: FK_G2_4_parent_1-fk_delete
               run:
-                  - name: FK_G2_parent_1-fk_delete
+                  - name: FK_G2_4_parent_1-fk_delete
                     weight: 100
                     queries:
-                        - query: delete from projects_with_1_ref where id=?
+                        - query: delete from projects_with_1_ref where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_2-fk_1-child_update
+            - workload: FK_G2_5_parent_2-fk_1-child_update
               run:
-                  - name: FK_G2_parent_2-fk_1-child_update
+                  - name: FK_G2_5_parent_2-fk_1-child_update
                     weight: 100
                     queries:
                         - query: update projects_with_2_ref_1_child set uid1=?, uid2=? where id=?;
@@ -315,9 +315,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_2-fk_1-child_delete
+            - workload: FK_G2_6_parent_2-fk_1-child_delete
               run:
-                  - name: FK_G2_parent_2-fk_1-child_delete
+                  - name: FK_G2_6_parent_2-fk_1-child_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_2_ref_1_child where id=?;
@@ -325,9 +325,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_2-fk_2-child_update
+            - workload: FK_G2_7_parent_2-fk_2-child_update
               run:
-                  - name: FK_G2_parent_2-fk_2-child_update
+                  - name: FK_G2_7_parent_2-fk_2-child_update
                     weight: 100
                     queries:
                         - query: update projects_with_2_ref_2_child set uid1=?, uid2=? where id=?;
@@ -338,12 +338,12 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_2-fk_2-child_delete
+            - workload: FK_G2_8_parent_2-fk_2-child_delete
               run:
-                  - name: FK_G2_parent_2-fk_2-child_delete
+                  - name: FK_G2_8_parent_2-fk_2-child_delete
                     weight: 100
                     queries:
-                        - query: delete from projects_with_2_ref_2_child where id=?
+                        - query: delete from projects_with_2_ref_2_child where id=?;
                           bindings:
                             - util: PrimaryIntGen
                               params: [1, 900000]
