added analyze_on_all_tables clause in G3 yamls

--- a/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G3_varyingFKdatatypes.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G3_varyingFKdatatypes.yaml
@@ -11,6 +11,7 @@ loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
+analyze_on_all_tables: true
 yaml_version: v1.0
 works:
     work:
