--- a/config/yugabyte/regression_pipelines/foreign_key/postgres/FK_G1_varyingFKconstraint.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/postgres/FK_G1_varyingFKconstraint.yaml
@@ -243,7 +243,7 @@ microbenchmark:
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
-                              - util: RandomNumber
+                              - util: RandomInt
                                 params: [1,100000]
 
             - workload: FK_G1_2_fk-on-pk_update
@@ -277,7 +277,7 @@ microbenchmark:
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
-                              - util: RandomNumber
+                              - util: RandomInt
                                 params: [1,100000]
 
             - workload: FK_G1_4_fk-on-uniqueCol_update
