--- a/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G1_varyingFKconstraint.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G1_varyingFKconstraint.yaml
@@ -244,7 +244,7 @@ microbenchmark:
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
-                              - util: RandomNumber
+                              - util: RandomInt
                                 params: [1,100000]
 
             - workload: FK_G1_2_fk-on-pk_update
@@ -278,7 +278,7 @@ microbenchmark:
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
-                              - util: RandomNumber
+                              - util: RandomInt
                                 params: [1,100000]
 
             - workload: FK_G1_4_fk-on-uniqueCol_update
