--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G3_varyingFKdatatypes.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G3_varyingFKdatatypes.yaml
@@ -239,7 +239,7 @@ microbenchmark:
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
-                              - util: RandomNumber
+                              - util: RandomInt
                                 params: [1,100000]
 
             - workload: FK_G3_4_bigint_update
@@ -273,7 +273,7 @@ microbenchmark:
                                 params: [1, 10]
                               - util: RandomNoWithDecimalPoints
                                 params: [1, 1000000, 2]
-                              - util: RandomNumber
+                              - util: RandomInt
                                 params: [1,100000]
 
             - workload: FK_G3_6_int_update
