--- a/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G2_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yb_colocated/FK_G2_varyingFKnumbers_parent_operations.yaml
@@ -1,6 +1,7 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
 url: jdbc:yugabytedb://{{endpoint}}:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 username: {{username}}
 password: {{password}}
 
@@ -30,16 +31,12 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_with_2_ref_1_child;
             - DROP TABLE IF EXISTS projects_without_ref;
 
-            - create table projects_with_1_ref(id int primary key, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
-            - create table projects_with_2_ref_1_child(id int primary key, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
-            - create table projects_without_ref(id int primary key, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2));
+            - create table projects_with_1_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
+            - create table projects_with_2_ref_1_child(id int, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
+            - create table projects_without_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
 
-            - create table employees_with_1_fk(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_id int not null);
-            - create table employees_with_2_fk_1_parent(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_uid1 int not null, project_uid2 int not null);
-
-            - CREATE INDEX project_uid_index ON employees_with_1_fk (project_id);
-            - CREATE INDEX project_uid1_index ON employees_with_2_fk_1_parent (project_uid1);
-            - CREATE INDEX project_uid2_index ON employees_with_2_fk_1_parent (project_uid2);
+            - create table employees_with_1_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_id int not null, primary key(id asc));
+            - create table employees_with_2_fk_1_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(10,2), project_uid1 int not null, project_uid2 int not null, primary key(id asc));
         cleanup:
             - DROP TABLE IF EXISTS employees_with_1_fk;
             - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
@@ -116,13 +113,13 @@ microbenchmark:
                   - name: budget
                     util: RandomNoWithDecimalPoints
                     params: [1, 1000000, 2]
-
+              
             - table: employees_with_1_fk
-              rows: 100000000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -143,11 +140,11 @@ microbenchmark:
                     params: [1,100000]
 
             - table: employees_with_2_fk_1_parent
-              rows: 100000000
+              rows: 1000000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 100000000]
+                    params: [1, 1000000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -177,9 +174,9 @@ microbenchmark:
             
         executeRules:
 
-            - workload: FK_G4_1_parent_no-fk_update
+            - workload: FK_G2_1_parent_no-fk_update
               run:
-                  - name: FK_G4_1_parent_no-fk_update
+                  - name: FK_G2_1_parent_no-fk_update
                     weight: 100
                     queries:
                         - query: update projects_without_ref set uid=uid+100000 where id=?;
@@ -187,9 +184,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G4_2_parent_no-fk_delete
+            - workload: FK_G2_2_parent_no-fk_delete
               run:
-                  - name: FK_G4_2_parent_no-fk_delete
+                  - name: FK_G2_2_parent_no-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_without_ref where id=?;
@@ -197,9 +194,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G4_3_parent_1-fk_update
+            - workload: FK_G2_3_parent_1-fk_update
               run:
-                  - name: FK_G4_3_parent_1-fk_update
+                  - name: FK_G2_3_parent_1-fk_update
                     weight: 100
                     queries:
                         - query: update projects_with_1_ref set uid=uid+100000 where id=?;
@@ -207,9 +204,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G4_4_parent_1-fk_delete
+            - workload: FK_G2_4_parent_1-fk_delete
               run:
-                  - name: FK_G4_4_parent_1-fk_delete
+                  - name: FK_G2_4_parent_1-fk_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_1_ref where id=?;
@@ -217,9 +214,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G4_5_parent_2-fk_1-child_update
+            - workload: FK_G2_5_parent_2-fk_1-child_update
               run:
-                  - name: FK_G4_5_parent_2-fk_1-child_update
+                  - name: FK_G2_5_parent_2-fk_1-child_update
                     weight: 100
                     queries:
                         - query: update projects_with_2_ref_1_child set uid1=uid1+100000, uid2=uid2+100000 where id=?;
@@ -227,9 +224,9 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 100000]
 
-            - workload: FK_G4_6_parent_2-fk_1-child_delete
+            - workload: FK_G2_6_parent_2-fk_1-child_delete
               run:
-                  - name: FK_G4_6_parent_2-fk_1-child_delete
+                  - name: FK_G2_6_parent_2-fk_1-child_delete
                     weight: 100
                     queries:
                         - query: delete from projects_with_2_ref_1_child where id=?;
