--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_1_100_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_1_100_varyingFKnumbers_parent_operations.yaml
@@ -135,7 +135,7 @@ microbenchmark:
                     util: RandomNoWithDecimalPoints
                     params: [1, 1000000, 2]
                   - name: project_id
-                    util: RandomInt
+                    util: CyclicSeqIntGen
                     params: [1,100000]
 
             - table: employees_with_2_fk_1_parent
@@ -160,10 +160,10 @@ microbenchmark:
                     util: RandomNoWithDecimalPoints
                     params: [1, 1000000, 2]
                   - name: project_uid1
-                    util: RandomInt
+                    util: CyclicSeqIntGen
                     params: [1,100000]
                   - name: project_uid2
-                    util: RandomInt
+                    util: CyclicSeqIntGen
                     params: [1,100000]
 
         afterLoad:
