--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,11 @@
             <artifactId>jdbc-yugabytedb</artifactId>
             <version>42.3.4</version>
         </dependency>
+        <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-s3</artifactId>
+        <version>1.12.782</version>
+    </dependency>
 
     </dependencies>
 
