added new FKP yaml

--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/test/fk_on_partitioning.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/test/fk_on_partitioning.yaml
@@ -20,31 +20,31 @@ microbenchmark:
     properties:
         setAutoCommit: false
         create:
-            - DROP TABLE IF EXISTS users_with_part;
-            - DROP TABLE IF EXISTS users_without_part;
             - DROP TABLE IF EXISTS orders_with_part;
             - DROP TABLE IF EXISTS orders_without_part;
+            - DROP TABLE IF EXISTS users_with_part;
+            - DROP TABLE IF EXISTS users_without_part;
 
             - DROP TABLE IF EXISTS users1;
             - DROP TABLE IF EXISTS users2;
             - DROP TABLE IF EXISTS users3;
             - DROP TABLE IF EXISTS users4;
 
-            - create table users_with_part (id int not null, name varchar(20) NOT NULL,phone varchar(15) NOT NULL,created_at DATE NOT NULL,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
-            - CREATE TABLE users1 PARTITION OF users_with_part FOR VALUES FROM ('2020-01-01') TO ('2020-12-31');
-            - CREATE TABLE users2 PARTITION OF users_with_part FOR VALUES FROM ('2021-01-01') TO ('2021-12-31');
-            - CREATE TABLE users3 PARTITION OF users_with_part FOR VALUES FROM ('2022-01-01') TO ('2022-12-31');
-            - CREATE TABLE users4 PARTITION OF users_with_part FOR VALUES FROM ('2023-01-01') TO ('2023-12-31');
+            - create table users_with_part (id int, name varchar(20) NOT NULL,phone varchar(15) NOT NULL,created_at int,PRIMARY KEY (id, created_at)) PARTITION BY RANGE (created_at);
+            - CREATE TABLE users1 PARTITION OF users_with_part FOR VALUES FROM (1) TO (1000);
+            - CREATE TABLE users2 PARTITION OF users_with_part FOR VALUES FROM (1000) TO (2000);
+            - CREATE TABLE users3 PARTITION OF users_with_part FOR VALUES FROM (2000) TO (3000);
+            - CREATE TABLE users4 PARTITION OF users_with_part FOR VALUES FROM (3000) TO (4001);
 
-            - create table users_without_part (id int not null, name varchar(20) NOT NULL,phone varchar(15) NOT NULL,created_at DATE NOT NULL,PRIMARY KEY (id, created_at));
+            - create table users_without_part (id int, name varchar(20) NOT NULL,phone varchar(15) NOT NULL,created_at int,PRIMARY KEY (id, created_at));
 
-            - CREATE TABLE orders_with_part (id int PRIMARY KEY,created_at date NOT NULL,order_date DATE NOT NULL,amount DECIMAL(10,2) NOT NULL);
-            - CREATE TABLE orders_without_part (id int PRIMARY KEY,created_at date NOT NULL,order_date DATE NOT NULL,amount DECIMAL(10,2) NOT NULL);
+            - CREATE TABLE orders_with_part (id int PRIMARY KEY,user_id int,order_date DATE NOT NULL,amount DECIMAL(10,2) NOT NULL);
+            - CREATE TABLE orders_without_part (id int PRIMARY KEY,user_id int,order_date DATE NOT NULL,amount DECIMAL(10,2) NOT NULL);
         cleanup:
-            - DROP TABLE IF EXISTS users_with_part;
-            - DROP TABLE IF EXISTS users_without_part;
             - DROP TABLE IF EXISTS orders_with_part;
             - DROP TABLE IF EXISTS orders_without_part;
+            - DROP TABLE IF EXISTS users_with_part;
+            - DROP TABLE IF EXISTS users_without_part;
 
             - DROP TABLE IF EXISTS users1;
             - DROP TABLE IF EXISTS users2;
@@ -52,11 +52,11 @@ microbenchmark:
             - DROP TABLE IF EXISTS users4;
         loadRules:
             - table: users_with_part
-              rows: 10000
+              rows: 4000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 4000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -64,15 +64,15 @@ microbenchmark:
                     util: RandomNstring
                     params: [10, 15]
                   - name: created_at
-                    util: RandomDateBtwYears
-                    params: [2020, 2023]
+                    util: PrimaryIntGen
+                    params: [1,4000]
 
             - table: users_without_part
-              rows: 10000
+              rows: 4000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
+                    params: [1, 4000]
                   - name: name
                     util: RandomAString
                     params: [1, 20]
@@ -80,18 +80,18 @@ microbenchmark:
                     util: RandomNstring
                     params: [10, 15]
                   - name: created_at
-                    util: RandomDateBtwYears
-                    params: [2020, 2023]
+                    util: PrimaryIntGen
+                    params: [1,4000]
 
             - table: orders_with_part
-              rows: 10000
+              rows: 4000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
-                  - name: created_at
-                    util: RandomDateBtwYears
-                    params: [2020, 2023]
+                    params: [1, 4000]
+                  - name: user_id
+                    util: PrimaryIntGen
+                    params: [1,4000]
                   - name: order_date
                     util: RandomDateBtwYears
                     params: [2020, 2023]
@@ -100,14 +100,14 @@ microbenchmark:
                     params: [1, 1000000, 2]
 
             - table: orders_without_part
-              rows: 10000
+              rows: 4000
               columns:
                   - name: id
                     util: PrimaryIntGen
-                    params: [1, 10000]
-                  - name: created_at
-                    util: RandomDateBtwYears
-                    params: [2020, 2023]
+                    params: [1, 4000]
+                  - name: user_id
+                    util: PrimaryIntGen
+                    params: [1,4000]
                   - name: order_date
                     util: RandomDateBtwYears
                     params: [2020, 2023]
