updated bulkload yamls and bumped up the version

--- a/config/yugabyte/regression_pipelines/bulkload/yb_colocated/goal1_varying_indexes/1_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yb_colocated/goal1_varying_indexes/1_index.yaml
@@ -9,7 +9,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
-yaml_version: v1.1
+yaml_version: v1.2
 works:
     work:
         rate: unlimited
@@ -25,6 +25,6 @@ microbenchmark:
         columns: 15
         rows: 3000000
         indexes: 1
-        filePath: orders.csv
+        filePath: bulkload/goal1_2/orders.csv
         stringLength: 32
         recreateCsvIfExists: false
