--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal2_index_pre_and_backfilling/load_backfill_5_index.yaml
@@ -8,7 +8,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
-yaml_version: v1.1
+yaml_version: v1.2
 works:
     work:
         rate: unlimited
@@ -23,7 +23,7 @@ microbenchmark:
         columns: 15
         rows: 3000000
         indexes: 5
-        filePath: orders.csv
+        filePath: bulkload/goal1_2/orders.csv
         stringLength: 32
         create_index_before_load: false
         create_index_after_load: true
