--- a/config/yugabyte/regression_pipelines/bulkload/postgres/goal4_varying_columns/10_columns.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/postgres/goal4_varying_columns/10_columns.yaml
@@ -9,7 +9,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
-yaml_version: v1.0
+yaml_version: v1.1
 works:
     work:
         rate: unlimited
@@ -22,5 +22,5 @@ microbenchmark:
         tableName: orders
         columns: 10
         rows: 3000000
-        filePath: orders.csv
+        filePath: bulkload/goal4/10col_orders.csv
         stringLength: 32
