--- a/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/30M_rows.yaml
+++ b/config/yugabyte/regression_pipelines/bulkload/yugabyte/goal3_varying_rows/30M_rows.yaml
@@ -9,7 +9,7 @@ isolation: TRANSACTION_REPEATABLE_READ
 collect_pg_stat_statements: false
 loaderthreads: 1
 terminals: 1
-yaml_version: v1.1
+yaml_version: v1.2
 works:
     work:
         rate: unlimited
@@ -23,5 +23,5 @@ microbenchmark:
         tableName: orders
         columns: 15
         rows: 30000000
-        filePath: orders.csv
+        filePath: bulkload/goal3/30m_orders.csv
         stringLength: 32
